<?xml version="1.0" encoding="utf-8"?>
<TableLayout

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/hello"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/please"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/message"
        android:textColor="#595151"
        android:textSize="20sp" />

    <TableRow>
        <RadioGroup
            android:id="@+id/payment"
            android:layout_width="wrap_content"
            android:layout_height="250dp">
            <RadioButton
                android:id="@+id/paypal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/paypal" />
            <RadioButton
                android:id="@+id/direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direct" />
        </RadioGroup>

        <NumberPicker
            android:layout_column="2"
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            />
    </TableRow>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressBackgroundTint="@color/design_default_color_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableRow>
        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="20sp"
            android:padding="20dp"/>

        <EditText
            android:id="@+id/editTextNumberDecimal1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate"/>
        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />
        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempTotal" />
    </TableRow>

    <TableRow>
        <ImageButton

            android:src="@drawable/mail"
            android:layout_column="2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            />
    </TableRow>


    
</TableLayout>


